[pom] Rework argLines for jmockit 1.43