@@ -114,21 +114,29 @@
     </distributionManagement>
 
     <properties>
+        <!-- Java Settings -->
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.testSource>1.8</maven.compiler.testSource>
         <maven.compiler.testTarget>1.8</maven.compiler.testTarget>
 
+        <!-- Checkstyle / Copyright -->
         <checkstyle.configLocation>checkstyle.xml</checkstyle.configLocation>
         <copyright>2018</copyright>
 
+        <!-- Github Settings -->
         <github.global.server>github</github.global.server>
 
+        <!-- Probe version settings -->
         <probe.version>${project.version} (built at ${maven.build.timestamp})</probe.version>
 
+        <!-- Project build settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <!-- Surefire Settings -->
+        <argLine>-javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar</argLine>
 
         <!-- Dependency Versions -->
         <activation.version>1.2.0</activation.version>
@@ -841,10 +849,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${surefire.plugin}</version>
-                    <configuration>
-                        <!-- For java 9 and jmockit -->
-                        <argLine>-Djdk.attach.allowAttachSelf</argLine>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
